package annotations;

public class Main {

    public static void main(String[] args) {
        HeyPrinter d = new HeyPrinter();
        d.hey();
    }
}
