package generics;

public class Animal {
    private int age;
    private String name;

    public void hey() {
        System.out.println("Hey");
    }
}
