package generics;

public class Cat extends Animal{
    @Override
    public void hey() {
        System.out.println("Hey cat");
    }
}
