package generics;

public class Dog extends Animal{
    @Override
    public void hey() {
        System.out.println("Hey Dog");
    }
}
