@startuml

title __GENERICS's Class Diagram__\n

  namespace  {
    namespace enerics {
      class generics.Animal {
          - age : int
          - name : String
          + hey()
      }
    }
  }
  

  namespace  {
    namespace enerics {
      class generics.Cat {
          + hey()
      }
    }
  }
  

  namespace  {
    namespace enerics {
      class generics.Dog {
          + hey()
      }
    }
  }
  

  namespace  {
    namespace enerics {
      class generics.Main {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace enerics {
      class generics.Pair {
          + doSomethingOnFirst()
          + getFirst()
          + getSecond()
          ~ Pair()
      }
    }
  }
  

  generics.Cat -up-|> generics.Animal
  generics.Dog -up-|> generics.Animal
  generics.Pair o-- F : first
  generics.Pair o-- S : second


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
